--- a/guides/user-flagged-content.mdx
+++ b/guides/user-flagged-content.mdx
@@ -58,6 +58,7 @@ Navigate to [your actions](https://moderationapi.com/app/moderation/actions) to 
 2. Since this action will only be invoked by our application code, select **"Hide action from dashboard"** to prevent it from appearing in any queues.
 3. Additionally, check **"Allow text input for value"** so users can add comments to their reports.
 4. Note the action key `report_profile` for later use.
+5. Select queue behavior: **"Action unresolves item (re-add to queue)"**: If the profile has already been resolved by a moderator, reporting it will re-add it to the queue so that it can be reviewed again.
 
 <Frame>
   <img
@@ -246,6 +247,8 @@ export const handleReportProfile = async (profile, reason) => {
   const { success } = await moderationApi.queueActions.execute(actionKey, {
     contentIds: [profile.id],
     value: reason,
+    // Optional: Find the queue ID in the URL of the queue's detail view. Add this if you always want to re-add the profile to the queue even if a moderator has resolved it before.
+    queueId: "6776a700c62f7bc4e7ba57bb",
   });
 
   return success;
