--- a/guides/user-flagged-content.mdx
+++ b/guides/user-flagged-content.mdx
@@ -4,6 +4,18 @@ sidebarTitle: "User-Flagged Content"
 description: "Learn how to handle user-flagged content with the Moderation API"
 ---
 
+<Frame>
+  <iframe
+    width="100%"
+    height="400px"
+    src="https://www.youtube.com/embed/l_zjaWW7weA"
+    title="YouTube video player"
+    frameborder="0"
+    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+    allowfullscreen
+  ></iframe>
+</Frame>
+
 ## Introduction
 
 In this guide, we'll demonstrate how to enable users to report other profiles within a fictional dating application named **Wizard Dating**.
